feat: 10 yeni anime kız karakteri eklendi, tema renkleriyle birlikte

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,20 @@
       <select id="character">
         <option value="marin">Marin Kitagawa</option>
         <option value="zerotwo">Zero Two</option>
+        <option value="asuna">Asuna Yuuki</option>
+        <option value="rem">Rem</option>
+        <option value="hinata">Hinata Hyuga</option>
+        <option value="albedo">Albedo</option>
+        <option value="esdeath">Esdeath</option>
+        <option value="makima">Makima</option>
+        <option value="power">Power</option>
+        <option value="darkness">Darkness</option>
+        <option value="yumeko">Yumeko Jabami</option>
+        <option value="lucoa">Lucoa</option>
+        <option value="rias">Rias Gremory</option>
+        <option value="mai">Mai Sakurajima</option>
+        <option value="nezuko">Nezuko</option>
+        <option value="tsunade">Tsunade</option>
       </select>
     </div>
   </header>
